fix $BUILD_BIN to match 1.0 binary release structure

--- a/src/sse-pkg/util/sonataInfoDisplay/Makefile
+++ b/src/sse-pkg/util/sonataInfoDisplay/Makefile
@@ -1,4 +1,4 @@
-BUILD_BIN      = ../../../../bin
+BUILD_BIN      = ../../../../sonata_install/bin
 DATA_DIR      = ../../../../data
 DOC_DIR       = ../../../../docs
 
