Make .o files depend upon header files (partially implemented)

--- a/src/sse-pkg/util/sonataInfoDisplay/Makefile
+++ b/src/sse-pkg/util/sonataInfoDisplay/Makefile
@@ -51,6 +51,6 @@ clean:
 	rm -f $(DATA_DIR)/sse-system-status.txt
 	rm -rf $(DOC_DIR)/src/sse-pkg/util/sonataInfoDisplay
 
-.cpp.o:
+%.o: %.cpp %.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
