Modified the Makefile so "make install" will install the binaries and data into the directory pointed to by $SONATADIR.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+SONATADIR ?= undefined
+
 all: dataDisplays sonataInfoDisplay
 
 dataDisplays:
@@ -9,3 +11,22 @@ sonataInfoDisplay:
 clean:	
 	cd sse-pkg/dataDisplays; make clean;
 	cd sse-pkg/util/sonataInfoDisplay; make clean;
+
+install: all
+ifeq "$(SONATADIR)" "undefined"
+	@echo ""
+	@echo "INSTALL FAILURE"
+	@echo "You need to define the environment variable SONATADIR"
+	@echo "which points to the OpenSonATA binary release directory"
+	@echo "where the sonata_install and sonata_archive directories"
+	@echo "reside. Please set this variable in your environment"
+	@echo "and try again."
+	@echo ""
+else
+	cp -rv ../sonata_install/bin/* $(SONATADIR)/sonata_install/bin/
+	cp -rv ../sonata_install/lib/* $(SONATADIR)/sonata_install/lib 
+	cp -rv ../data/* $(SONATADIR)/data
+	@echo ""
+	@echo "INSTALL COMPLETE"
+	@echo ""
+endif
