--- a/src/sse-pkg/util/sonataInfoDisplay/Makefile
+++ b/src/sse-pkg/util/sonataInfoDisplay/Makefile
@@ -12,6 +12,7 @@ SOURCES=main.cpp details.cpp utils.cpp screen.cpp components.cpp logfile.cpp
 OBJECTS1=$(SOURCES:.cpp=.o)
 OBJECTS=$(OBJECTS1:.c=.o)
 EXECUTABLE=sonataInfoDisplay
+#LIBS = -lnsl  -L/usr/lib -lm -lz -lpthread -lrt -lncurses
 LIBS = -L/usr/lib -lm -lz -lncurses
 
 all: $(SOURCES) $(EXECUTABLE) data docs
@@ -20,8 +21,7 @@ $(BUILD_BIN)/$(EXECUTABLE): $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS) 
 	$(CXX) -o $@ $(OBJECTS) $(EXTRA_OBJS) $(LIBS)
-
-install: $(EXECUTABLE)
+	# This should be moved to an 'install' target.
 	cp $(EXECUTABLE) $(BUILD_BIN)
 	cp ./displayDemo $(BUILD_BIN)
 
